@@ -16,43 +16,48 @@
 function group_tools_check_group_email_invitation($invite_code, $group_guid = 0) {
 	$result = false;
 	
-	if (!empty($invite_code)) {
+	if (empty($invite_code)) {
+		return false;
+	}
+	
+	// note not using elgg_get_entities_from_annotations
+	// due to performance issues with LIKE wildcard search
+	// prefetch metastring ids for use in lighter joins instead
+	$name_id = elgg_get_metastring_id("email_invitation");
+	$code_id = elgg_get_metastring_id($invite_code);
+	$sanitized_invite_code = sanitize_string($invite_code);
+	
+	$options = array(
+		"limit" => 1,
+		"wheres" => array(
+			"n_table.name_id = {$name_id} AND (n_table.value_id = {$code_id} OR v.string LIKE '{$sanitized_invite_code}|%')"
+		)
+	);
+	
+	if (!empty($group_guid)) {
+		$options["annotation_owner_guids"] = array($group_guid);
+	}
+	
+	// find hidden groups
+	$ia = elgg_set_ignore_access(true);
+	
+	$annotations = elgg_get_annotations($options);
 			
-		// note not using elgg_get_entities_from_annotations
-		// due to performance issues with LIKE wildcard search
-		// prefetch metastring ids for use in lighter joins instead
-		$name_id = add_metastring('email_invitation');
-		$code_id = add_metastring($invite_code);
-		$sanitized_invite_code = sanitize_string($invite_code);
-		$options = array(
-			'limit' => 1,
-			'wheres' => array(
-				"n_table.name_id = {$name_id} AND (n_table.value_id = {$code_id} OR v.string LIKE '{$sanitized_invite_code}|%')"
-			)
-		);
-		
-		if (!empty($group_guid)) {
-			$options["annotation_owner_guids"] = array($group_guid);
-		}
-		
-		$annotations = elgg_get_annotations($options);
-				
-		if (!$annotations) {
-			return $result;
-		}
-		
-		// find hidden groups
-		$ia = elgg_set_ignore_access(true);
-		
-		$group = $annotations[0]->getEntity();
-		
-		if ($group) {
-			$result = $group;
-		}
-		
+	if (!$annotations) {
 		// restore access
 		elgg_set_ignore_access($ia);
+		
+		return false;
 	}
+	
+	$group = $annotations[0]->getEntity();
+	
+	if ($group) {
+		$result = $group;
+	}
+	
+	// restore access
+	elgg_set_ignore_access($ia);
 	
 	return $result;
 }
